# dataclass-macro

./: Cargo.toml  LICENSE  README.md  SERDE.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: dataclass_tests.rs
